[⚙️ FEATURE] 검색 후 결과 클릭 시 상세 페이지로 이동

--- a/android/app/src/main/res/layout/activity_detail_hospital.xml
+++ b/android/app/src/main/res/layout/activity_detail_hospital.xml
@@ -21,8 +21,8 @@
             android:textStyle="bold" />
 
         <!-- 미니맵(이미지 자리) -->
-        <ImageView
-            android:id="@+id/imgMiniMap"
+        <com.kakao.vectormap.MapView
+            android:id="@+id/miniMap"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginTop="12dp"
