--- a/android/app/src/main/res/layout/activity_detail_hospital.xml
+++ b/android/app/src/main/res/layout/activity_detail_hospital.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="20dp"
+        android:layout_marginTop="30dp">
 
         <!-- 제목 -->
         <TextView
@@ -25,7 +26,7 @@
             android:id="@+id/miniMap"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="42dp"
             android:scaleType="centerCrop"
             android:background="#EDEDED" />
 
