--- a/android/app/src/main/res/layout/activity_detail_hospital.xml
+++ b/android/app/src/main/res/layout/activity_detail_hospital.xml
@@ -85,29 +85,13 @@
             android:text="진료 정보"
             android:textStyle="bold" />
 
-        <LinearLayout
-            android:id="@+id/boxDepts"
+        <TableLayout
+            android:id="@+id/tableDepts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:stretchColumns="1"
             android:padding="8dp"
-            android:background="#F5F6F7">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="내과 · 40명" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="외과 · 15명" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="영상의학과 · 14명" />
-        </LinearLayout>
+            android:background="@color/white"/>
 
     </LinearLayout>
 </ScrollView>
