--- a/android/app/src/main/res/layout/fragment_profile.xml
+++ b/android/app/src/main/res/layout/fragment_profile.xml
@@ -15,19 +15,19 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <!-- 상단: 프로필 사진 + 설정 버튼 -->
+        <!-- 상단: 프로필 사진(가운데) + 설정 버튼(우측 상단) -->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
             android:paddingVertical="16dp">
 
+            <!-- 프로필 사진: 정중앙 -->
             <androidx.cardview.widget.CardView
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 app:cardCornerRadius="60dp"
                 app:cardElevation="8dp"
-                android:layout_centerHorizontal="true">
+                android:layout_centerInParent="true">
 
                 <ImageView
                     android:id="@+id/profile_image"
@@ -39,12 +39,13 @@
                     tools:src="@drawable/ic_user"/>
             </androidx.cardview.widget.CardView>
 
-            <!-- 우측 상단 설정 버튼 -->
+            <!-- 설정 버튼: 오른쪽 상단 -->
             <ImageButton
                 android:id="@+id/btn_settings"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
                 android:layout_margin="8dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="설정"
