--- a/android/app/src/main/res/drawable/allergy_rounded_background.xml
+++ b/android/app/src/main/res/drawable/allergy_rounded_background.xml
@@ -1,5 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="8dp" />
-    <solid android:color="#E7F0FE" />
+    <stroke android:width="1dp" android:color="#4285F4" />
+    <solid android:color="@android:color/white" />
 </shape>
