--- a/android/app/src/main/res/drawable/radio_button_selector.xml
+++ b/android/app/src/main/res/drawable/radio_button_selector.xml
@@ -2,13 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="?attr/colorPrimary"/> <corners android:radius="8dp"/>
+            <solid android:color="#4285F4" />
+            <corners android:radius="8dp" />
         </shape>
     </item>
-    <item>
+    <item android:state_checked="false">
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/transparent"/>
-            <corners android:radius="8dp"/>
+            <solid android:color="@android:color/transparent" />
+            <corners android:radius="8dp" />
         </shape>
     </item>
 </selector>
