--- a/android/app/src/main/res/layout/fragment_profile.xml
+++ b/android/app/src/main/res/layout/fragment_profile.xml
@@ -84,12 +84,13 @@
             android:id="@+id/btn_modify_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="24dp"
+            android:layout_marginHorizontal="100dp"
             android:layout_marginTop="16dp"
             android:text="사용자 정보 수정하기"
             android:textColor="@color/black"
+            android:textStyle="bold"
             android:backgroundTint="#FFFFFF"
-            app:strokeColor="#DDDDDD"
+            app:strokeColor="#4285F4"
             app:strokeWidth="1dp"
             app:cornerRadius="8dp"
             app:elevation="0dp"/>
