--- a/android/app/src/main/res/layout/fragment_map.xml
+++ b/android/app/src/main/res/layout/fragment_map.xml
@@ -87,6 +87,7 @@ tools:context="nav.MapFragment">
         app:layout_constraintStart_toStartOf="parent"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" >
 
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -97,18 +98,28 @@ tools:context="nav.MapFragment">
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <View
+                android:id="@+id/dragView"
+                android:layout_width="60dp"
+                android:layout_height="3dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/down_bar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/hospital_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="36dp"
+                android:layout_marginTop="21dp"
                 android:text="건양대학병원"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/dragView" />
 
             <LinearLayout
                 android:id="@+id/linearLayout2"
@@ -268,13 +279,12 @@ tools:context="nav.MapFragment">
             </LinearLayout>
 
             <Button
-                android:id="@+id/closeBtn"
+                android:id="@+id/navBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
                 android:layout_marginEnd="20dp"
-                android:text="닫기"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:text="길찾기"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
         </androidx.constraintlayout.widget.ConstraintLayout>
