--- a/android/app/src/main/res/layout/fragment_map.xml
+++ b/android/app/src/main/res/layout/fragment_map.xml
@@ -78,7 +78,7 @@ tools:context="nav.MapFragment">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="360dp"
         android:background="@drawable/rounded_top_corners"
         android:orientation="vertical"
         android:visibility="gone"
@@ -282,11 +282,11 @@ tools:context="nav.MapFragment">
                 android:id="@+id/navBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="10dp"
+                android:layout_marginVertical="15dp"
                 android:layout_marginEnd="20dp"
                 android:text="길찾기"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
