[⚙️ FEAT] 혼잡도에 따른 색상 변경

--- a/android/app/src/main/res/layout/fragment_map.xml
+++ b/android/app/src/main/res/layout/fragment_map.xml
@@ -228,6 +228,7 @@ tools:context="nav.MapFragment">
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/congestionIcon"
                         android:layout_width="15dp"
                         android:layout_height="15dp"
                         android:src="@drawable/green_marker" />
