--- a/android/app/src/main/res/layout/fragment_profile.xml
+++ b/android/app/src/main/res/layout/fragment_profile.xml
@@ -67,6 +67,19 @@
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
                 tools:text="사용자 이름"/>
+            <ImageButton
+                android:id="@+id/btn_settings"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_margin="8dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="설정"
+                android:padding="8dp"
+                android:src="@drawable/ic_settings"
+                app:tint="@color/black" />
+
         </RelativeLayout>
 
         <com.google.android.material.button.MaterialButton
