--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
             android:id="@+id/textId"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="아이디 (ID)"
+            android:text="아이디 (email형식)"
             android:textSize="14sp"
             android:layout_marginTop="28dp"
             app:layout_constraintTop_toBottomOf="@id/Title"
