--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="seashell">#FFF5EE</color>
     <color name="lavender_blush">#FFF0F5</color>
     <color name="papaya_whip">#FFEFD5</color>
+    <color name="purple_500">#9C27B0</color>
     <color name="blanched_almond">#FFEBCD</color>
     <color name="misty_rose">#FFE4E1</color>
     <color name="bisque">#FFE4C4</color>
