[🎨 DESIGN] 지도 페이지 ui 적용

--- a/android/app/src/main/res/layout/fragment_map.xml
+++ b/android/app/src/main/res/layout/fragment_map.xml
@@ -40,7 +40,7 @@ tools:context="nav.MapFragment">
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:background="@drawable/rounded_edittext"
-                android:hint="검색어를 입력하세요."
+                android:hint="병원 검색하기"
                 android:padding="15dp"
                 android:textSize="13sp"
                 app:layout_constraintBottom_toBottomOf="parent"
