--- a/android/app/src/main/res/layout/activity_detail_hospital.xml
+++ b/android/app/src/main/res/layout/activity_detail_hospital.xml
@@ -19,11 +19,12 @@
             android:orientation="horizontal">
 
             <ImageButton
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:id="@+id/backBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_marginBottom="2dp"
-                android:background="@drawable/ic_back_arrow"/>
+                android:background="@drawable/ic_arrow_back"/>
 
             <TextView
                 android:id="@+id/tvHospitalName"
