--- a/android/app/src/main/res/layout/activity_detail_hospital.xml
+++ b/android/app/src/main/res/layout/activity_detail_hospital.xml
@@ -171,8 +171,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:stretchColumns="1"
-            android:padding="8dp"
-            android:background="@color/white"/>
-
+            android:layout_marginTop="17dp"/>
     </LinearLayout>
 </ScrollView>
