--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -144,4 +144,5 @@
     <color name="navy">#000080</color>
     <color name="black">#000000</color>
     <color name="blue_gray">#A9B7C8</color>
+    <color name="light_blue_chart">#D7E2FF</color>
 </resources>
