--- a/android/app/src/main/res/drawable/rounded_btn.xml
+++ b/android/app/src/main/res/drawable/rounded_btn.xml
@@ -11,5 +11,5 @@
     <!-- 테두리 (선택사항) -->
     <stroke
         android:width="1dp"
-        android:color="@color/light_grey"/>
+        android:color="@color/blue_navy"/>
 </shape>
