--- a/android/app/src/main/res/drawable/spinner_background.xml
+++ b/android/app/src/main/res/drawable/spinner_background.xml
@@ -4,18 +4,19 @@
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white"/>
             <corners android:radius="8dp"/>
-            <stroke android:width="1dp" android:color="#CCCCCC"/>
+            <stroke android:width="1dp" android:color="@color/blue_gray"/>
         </shape>
     </item>
 
-    <item android:gravity="center_vertical|end">
+    <item
+        android:gravity="center_vertical|end">
         <vector
             android:width="24dp"
             android:height="24dp"
             android:viewportWidth="24.0"
             android:viewportHeight="24.0">
             <path
-                android:fillColor="?attr/colorPrimary"
+                android:fillColor="@color/blue_navy"
                 android:pathData="M7,10l5,5 5,-5z"/>
         </vector>
     </item>
