[🎨 DESIGN] 지도 검색 창 디자인 적용

--- a/android/app/src/main/res/layout/fragment_map.xml
+++ b/android/app/src/main/res/layout/fragment_map.xml
@@ -39,7 +39,7 @@ tools:context="nav.MapFragment">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:background="@drawable/rounded_edittext"
+                android:background="@drawable/login_edittext"
                 android:hint="병원 검색하기"
                 android:padding="15dp"
                 android:textSize="13sp"
